# swiss-llm-quickstart

./: .gitignore  CONTRIBUTING.md  README.md  run.py  run_base.py
azure-container-apps/: README.md  azure.yaml  pyproject.toml
azure-container-apps/infra/: README.md  main.bicep  main.parameters.json
azure-container-apps/infra/hooks/: postdeploy.sh  postprovision.sh  preprovision.sh
azure-container-apps/infra/modules/: app.bicep
azure-container-apps/infra/modules/app/: apertus-container-app.bicep  container-apps.bicep  fetch-container-image.bicep
azure-container-apps/nginx/: Dockerfile  nginx.conf
azure-kubernetes-service/: README.md
azure-virtual-machine/: README.md  apertus_tool_parser.py  deploy.sh  deploy_NC48.sh  env.sample  init.sh  tool_calling.sh
docker/: Dockerfile  README.md  docker-entrypoint.sh
src/apertus-vllm/: Dockerfile  README.md  apertus_tool_parser.json  docker-entrypoint.sh
src/apertus-vllm/tool-parser/: apertus_chat_template.jinja  apertus_tool_parser.py
src/frontend/: Dockerfile  README.md  app.py  app2.py  app_content_safety.py  app_tools.py  chainlit.md  pyproject.toml  skmain.py
src/frontend/tests/: test_content_safety.py
src/rag/: app.py  main.py  pyproject.toml
